--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.meta.xr.simulator": "file:/Users/kosti/Downloads/package",
+    "com.meta.xr.simulator": "file:../meta_xr_simulator_v59/com.meta.xr.simulator-59.0.0.tgz",
     "com.unity.collab-proxy": "2.1.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.textmeshpro": "3.0.6",
